<resources>
    <!-- Drawer String-->
    <string name="app_name">M.A.O</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Mido Audio Optimizer</string>
    <string name="nav_header_subtitle">Kernel Audio Configuration App</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_features">Kernel Audio Features</string>
    <string name="menu_status">Kernel Audio Status</string>
    <string name="menu_about">About</string>

    <!-- Button String -->
    <string name="menu_home">Home</string>
    <string name="menu_back">Back</string>
    <string name="menu_refresh">Refresh</string>
    <string name="next">Next</string>

    <!-- Main String -->
    <string name="welcome">Welcome</string>
    <string name="about">Work In Progress :)</string>
    <string name="audio_path_text_fragment">Audio Configuration Menu</string>
    <string name="audio_path_secondary_text_fragment">Control Current Kernel Audio Features</string>
    <string name="audio_status_text_fragment">Audio Status Menu</string>
    <string name="audio_status_secondary_text_fragment">Check Current Kernel Audio Status</string>
    <string name="home_secondary_text">Lets Slide to Start</string>
    <string name="main_text">Mido Audio Optimizer</string>
    <string name="secondary_text">Available Kernel Audio Control</string>
    <string name="audio_path_title">Kernel Audio Configuration</string>
    <string name="audio_path_button">Kernel Audio Features</string>
    <string name="audio_status_title">Kernel Audio Status</string>
    <string name="audio_status_freq">Sample Rate</string>
    <string name="audio_status_bit_depth">Bit Depth</string>
    <string name="audio_status_flags">Audio Flags</string>
    <string name="audio_status_out">Audio Out</string>
    <string name="audio_status_buffer">Buffer Size</string>
    <string name="audio_status_current">Current Audio Status</string>
    <string name="audio_flags_current">Not Detected</string>
    <string name="empty">null</string>
    <string name="audio_status_button">Audio Status</string>
    <string name="uhqa_text">UHQA (Ultra High Quality Audio)</string>
    <string name="uhqa_text_on">Ultra High Quality Audio is active</string>
    <string name="uhqa_text_off">Ultra High Quality Audio is not active</string>
    <string name="uhqa_desc">UHQA mode allows to have high performance audio, and it is not enabled by default.
Have better turn off/on music to switch the amplifier for HPH path.</string>
    <string name="uhqa_n_available">Ultra High Quality Audio feature is not available in your kernel.</string>
    <string name="hph_text">Headset High Performance Mode</string>
    <string name="hph_text_on">Headset High Performance Mode is active</string>
    <string name="hph_text_off">Headset High Performance Mode is not active</string>
    <string name="hph_desc">Invoke class AB mode for headset path when sample rate
is set to 192KHz and bit width is set to 24. Change it to enables
headset path in Ultra High Quality Audio mode.</string>
    <string name="hph_n_available">Headset High Performance feature is not available in your kernel.</string>
    <string name="amp_text">Low Distortion AMP</string>
    <string name="amp_text_on">Low Distortion AMP is active</string>
    <string name="amp_text_off">Low Distortion AMP is not active</string>
    <string name="amp_desc">Provide low distortion audio quality by enable/disable l Class AB Mode directly on amplifier from the kernel.</string>
    <string name="amp_n_available">Low Distortion AMP feature is not available in your kernel.</string>
    <string name="impedance_text">Headphone Impedance Detection</string>
    <string name="impedance_text_on">Headphone Impedance Detection is active</string>
    <string name="impedance_text_off">Headphone Impedance Detection is not active</string>
    <string name="impedance_desc">Provide impedance of headphones to be able to adjust gain according to
impedance so user can have consistent volume level with different
headphones.</string>
    <string name="impedance_n_available">Headphone Impedance Detection feature is not available in your kernel.</string>
    <string name="exp_text">Enable Experimental Features</string>
    <string name="exp_desc">NOTE: Experimental features can make problem with audio process if you are use some service that need exclusive access like BiQuads service or other.</string>
    <string name="exp_text_on">Experimental features is active</string>
    <string name="exp_text_off">Experimental features is not active</string>
    <string name="qcom_text">Qualcomm Power Gating</string>
    <string name="qcom_desc">Qualcomm power gating features is only useful if user want to use BiQuads filter, it should save power for other users. (Active it if you want to use BiQuads)</string>
    <string name="qcom_text_on">BiQuads features is active</string>
    <string name="qcom_text_off">BiQuads features is not active</string>
    <string name="app_desc">M.A.O is application that can control current exist audio features on kernel directly and show current audio status that running on device when play a song or not from audioserver service on android.</string>
    <string name="app_desc_2">This app is work by using shell command that will dump active android audioserver from system and sort it by category then detect it each current state.</string>
    <string name="app_desc_3">This app is designed for Xiaomi Redmi Note 4X (Mido) that use custom android ROM based on android 7.0+.</string>
    <string name="git_desc">Git Code</string>
    <string name="git_release">Git Release</string>
    <string name="app_visit">Visit App</string>
    <string name="app_details">Contributor</string>
    <string name="app_details_title">Application Contributor</string>
    <string name="app_details_end">Application is only for personal use</string>
    <string name="app_details_ext">Thank you for all support</string>
    <string name="main_contributor">Dicky Herlambang</string>
    <string name="second_contributor">Andrean Alvianto</string>
    <string name="main_cont_desc">Main Developer</string>
    <string name="second_cont_desc">Logo Creator</string>
    <string name="name">Name</string>
    <string name="title">Title</string>
    <string name="contact">Contact</string>
    <string name="id">:</string>
</resources>