<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#424242"
    tools:context=".audio_path">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/audio_path_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.098" />

    <android.support.v7.widget.CardView
        android:id="@+id/cv_main"
        android:layout_width="410dp"
        android:layout_height="320dp"
        app:cardCornerRadius="12sp"
        app:cardElevation="0.4sp"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="270dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="31dp"
                android:layout_marginVertical="24dp"
                android:layout_marginLeft="23dp"
                android:text="@string/secondary_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#000000" />

            <Switch
                android:id="@+id/uhqa"
                android:layout_width="355dp"
                android:layout_height="25dp"
                android:layout_marginVertical="100dp"
                android:layout_marginLeft="23dp"
                android:text="@string/uhqa_text"
                android:textColor="#000000"
                android:textOff="@string/uhqa_text_off"
                android:textOn="@string/uhqa_text_on" />

            <Switch
                android:id="@+id/hph"
                android:layout_width="355dp"
                android:layout_height="25dp"
                android:layout_marginVertical="140dp"
                android:layout_marginLeft="23dp"
                android:text="@string/hph_text"
                android:textColor="#000000"
                android:textOff="@string/hph_text_off"
                android:textOn="@string/hph_text_on" />

            <Switch
                android:id="@+id/amp"
                android:layout_width="355dp"
                android:layout_height="25dp"
                android:layout_marginVertical="180dp"
                android:layout_marginLeft="23dp"
                android:text="@string/amp_text"
                android:textColor="#000000"
                android:textOff="@string/amp_text_off"
                android:textOn="@string/amp_text_on" />

            <Switch
                android:id="@+id/impedance"
                android:layout_width="355dp"
                android:layout_height="25dp"
                android:layout_marginVertical="220dp"
                android:layout_marginLeft="23dp"
                android:text="@string/impedance_text"
                android:textColor="#000000"
                android:textOff="@string/impedance_text_off"
                android:textOn="@string/impedance_text_on" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>