<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single"
        android:id="@+id/slide_main">
        <item
            android:id="@+id/nav_home"
            android:icon="@mipmap/ic_home"
            android:title="@string/menu_home" />
    </group>

    <group android:checkableBehavior="single"
     android:id="@+id/slide_features">
        <item
            android:id="@+id/nav_features"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_features" />
        <item
            android:id="@+id/nav_status"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_status" />
    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/slide_about">
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_about" />
    </group>

</menu>