<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#424242">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_main"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:cardBackgroundColor="@color/color_app_bar">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/secondary_text"
                android:textAlignment="center"
                android:fontFamily="@font/test"
                android:layout_gravity="center"
                android:textSize="24sp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#ffffff" />

    </androidx.cardview.widget.CardView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_marginTop="190dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.020">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_uhqa"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:cardMaxElevation="2dp"
        app:cardUseCompatPadding="true">

        <Switch
            android:id="@+id/uhqa"
            style="@style/Base.TextAppearance.AppCompat.Widget.Switch"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:gravity="top"
            android:text="@string/uhqa_text"
            android:fontFamily="@font/test"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:textOff="@string/uhqa_text_off"
            android:textOn="@string/uhqa_text_on" />

        <TextView
                android:id="@+id/t_uhqa"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:gravity="top"
                android:text="@string/uhqa_text"
                android:fontFamily="@font/test"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/t_v_uhqa"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginTop="30dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/test"
                android:text="@string/uhqa_desc"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="#000000"
                android:visibility="visible" />

            <TextView
                android:id="@+id/d_uhqa"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginTop="30dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/test"
                android:text="@string/uhqa_n_available"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="#000000" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_hph"
        app:cardPreventCornerOverlap="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="15dp"
        app:cardMaxElevation="2dp"
        app:cardUseCompatPadding="true">

            <Switch
                android:id="@+id/hph"
                style="@style/Base.TextAppearance.AppCompat.Widget.Switch"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:gravity="top"
                android:textAllCaps="false"
                android:text="@string/hph_text"
                android:textColor="#000000"
                android:textOff="@string/uhqa_text_off"
                android:textOn="@string/uhqa_text_on" />

            <TextView
                android:id="@+id/t_hph"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:gravity="top"
                android:fontFamily="@font/test"
                android:text="@string/hph_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/t_v_hph"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/test"
                android:text="@string/hph_desc"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="#000000"
                android:visibility="visible" />

            <TextView
                android:id="@+id/d_hph"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginTop="30dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/test"
                android:text="@string/hph_n_available"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="#000000" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_amp"
        app:cardPreventCornerOverlap="true"
        android:layout_width="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_height="100dp"
        android:layout_marginTop="15dp"
        app:cardMaxElevation="2dp"
        app:cardUseCompatPadding="true">

            <Switch
                android:id="@+id/amp"
                style="@style/Base.TextAppearance.AppCompat.Widget.Switch"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:gravity="top"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textAllCaps="false"
                android:fontFamily="@font/test"
                android:text="@string/amp_text"
                android:textColor="#000000"
                android:textOff="@string/amp_text_off"
                android:textOn="@string/amp_text_on" />

            <TextView
                android:id="@+id/t_amp"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:gravity="top"
                android:fontFamily="@font/test"
                android:text="@string/amp_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/t_v_amp"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginTop="40dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/test"
                android:text="@string/amp_desc"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="#000000"
                android:visibility="visible" />

            <TextView
                android:id="@+id/d_amp"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginTop="40dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/test"
                android:text="@string/amp_n_available"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="#000000" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_impedance"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:cardPreventCornerOverlap="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        app:cardMaxElevation="2dp"
        app:cardUseCompatPadding="true">

            <Switch
                android:id="@+id/impedance"
                style="@style/Base.TextAppearance.AppCompat.Widget.Switch"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:gravity="top"
                android:textAllCaps="false"
                android:fontFamily="@font/test"
                android:text="@string/impedance_text"
                android:textColor="#000000"
                android:textOff="@string/uhqa_text_off"
                android:textOn="@string/uhqa_text_on" />

            <TextView
                android:id="@+id/t_impedance"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:gravity="top"
                android:fontFamily="@font/test"
                android:text="@string/impedance_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/t_v_impedance"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginTop="30dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/test"
                android:text="@string/impedance_desc"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="#000000"
                android:visibility="visible" />

            <TextView
                android:id="@+id/d_impedance"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginTop="30dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/test"
                android:text="@string/impedance_n_available"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="#000000" />

    </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_experimental"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:cardPreventCornerOverlap="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="15dp"
            app:cardMaxElevation="2dp"
            app:cardUseCompatPadding="true">

                <Switch
                    android:id="@+id/exp"
                    style="@style/Base.TextAppearance.AppCompat.Widget.Switch"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:gravity="top"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:textAllCaps="false"
                    android:fontFamily="@font/test"
                    android:text="@string/exp_text"
                    android:textColor="#000000"
                    android:textOff="@string/exp_text_off"
                    android:textOn="@string/exp_text_on" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_height="120dp"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/test"
                    android:text="@string/exp_desc"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="#000000"
                    android:visibility="visible" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_qcom_gating"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:cardPreventCornerOverlap="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="15dp"
            app:cardMaxElevation="2dp"
            app:cardUseCompatPadding="true">

                <Switch
                    android:id="@+id/qcom_gating"
                    style="@style/Base.TextAppearance.AppCompat.Widget.Switch"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:gravity="top"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:textAllCaps="false"
                    android:fontFamily="@font/test"
                    android:text="@string/qcom_text"
                    android:textColor="#000000"
                    android:textOff="@string/qcom_text_off"
                    android:textOn="@string/qcom_text_on" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/test"
                    android:text="@string/qcom_desc"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="#000000"
                    android:visibility="visible" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_back"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:background="@drawable/ripple_effect"
        android:text="@string/menu_back"
        android:textAllCaps="false"
        android:fontFamily="@font/test"
        android:layout_marginStart="280dp"
        android:layout_marginTop="650dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.00"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.000" />

</androidx.constraintlayout.widget.ConstraintLayout>