<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:background="#424242">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/audio_path_text_fragment"
            android:fontFamily="@font/test"
            android:textSize="25sp"
            android:layout_marginTop="100dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#ffffff"
            android:textAlignment="center" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            app:civ_border_color="#FFFFFFFF"
            app:civ_border_width="4dp"
            android:src="@drawable/test"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/audio_path_secondary_text_fragment"
            android:textAlignment="center"
            android:fontFamily="@font/test"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/audio_conf"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:textSize="18sp"
            android:background="@drawable/ripple_effect"
            android:text="@string/next"
            android:layout_gravity="end"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="80dp"
            android:fontFamily="@font/test"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#ffffff" />
    </LinearLayout>
</FrameLayout>