<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#424242">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:text="@string/nav_header_title"
            android:fontFamily="@font/test"
            android:textSize="25sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#ffffff"
            android:textAlignment="center" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            app:civ_border_color="#FFFFFFFF"
            app:civ_border_width="4dp"
            android:src="@drawable/test"
            android:contentDescription="@string/app_name"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="140dp"
            android:text="@string/home_secondary_text"
            android:textAlignment="center"
            android:fontFamily="@font/test"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#ffffff" />
    </LinearLayout>
</FrameLayout>